style.css
/* Common styles for all screen sizes */
:root {
  --background-dark: #2d354800;
  --background-darker: #484b5388;
  --text-light: #217bd4;
  --text-lighter: #ffffffe6;
  --spacing-s: 8px;
  --spacing-m: 16px;
  --spacing-l: 24px;
  --spacing-xl: 32px;
  --spacing-xxl: 64px;
  --width-container: 1200px;
}


html,
body {
  margin: 0;
  padding: 0;
  font-family: 'Montserrat', sans-serif;
  font-size: 16px;
  overflow-x: hidden;
  /* overflow: hidden; */
}

/* Scroll */
/* Define the scrollbar track */
::-webkit-scrollbar {
  width: 10px; /* Adjust the width as needed */
  background-color: black; /* Make it transparent */
  border-radius: 10px; /* Add rounded edges */
}

/* Define the scrollbar thumb */
::-webkit-scrollbar-thumb {
  background-color: #217ad497; /* Set the color */
  border-radius: 10px; /* Add rounded edges */
}

/* Define the scrollbar thumb on hover */
::-webkit-scrollbar-thumb:hover {
  background-color: #185b9d; /* Change color on hover if desired */
}

/* Define the scrollbar track when it is not active (e.g., on Mac) */
::-webkit-scrollbar-track {
  background-color: black; /* Make it transparent */
}

/* Define the scrollbar corner */
::-webkit-scrollbar-corner {
  background-color: transparent; /* Make it transparent */
}



.particle-canvas {
  position: fixed;
  background: #111111;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: -10;
  /* Set a negative z-index to place it behind other elements */
}

/* Header styles for larger screens */
.header {
  padding: 2rem 2rem;
  top: 0;
  z-index: 1;
}

.name,
.nav {
  display: block;
}

.nav {
  text-decoration: none;
  color: #fff;
  font-size: 1.4rem;
  float: right;
}

.nav-links {
  color: #fff;
  text-decoration: none;
  margin-left: 20px;
  margin-top: 20px;
  transition: transform 0.2s, box-shadow 0.2s, color 0.2s;
}

.nav-link:hover {
  color: #217bd4;
  transform: scale(1.5);
}


.header-empty,
.hero-header {
  display: inline-block;
}

footer {
  text-align: center;
  padding: 20px 0;
  margin: 0 0;
  width: 100%;
  bottom: 0;
}

/* Style for the social media icons */
.social-icons {
  list-style: none;
  padding: 0;
  margin: 0;
}

.social-icons li {
  display: inline-block;
  margin: 0 20px;
}

.social-icons a {
  text-decoration: none;
  color: #fff;
  font-size: 24px;
  transition: transform 0.2s, box-shadow 0.2s, color 0.2s;
}

.social-icons a:hover {
  color: #217bd4;
  transform: scale(1.2);
}

.btn {
  border: none;
  margin: 1rem 0;
  border-radius: 35px;
  background: var(--text-light);
  font-size: 0.9rem;
  text-transform: uppercase;
  padding: 1rem 1.5rem;
  font-weight: 700;
  letter-spacing: 2px;
  display: inline-block;
  cursor: pointer;
}

/* ############################################################ */


/* Hide toggle */
@media (min-width: 1136px) {

  .sidebar,
  .toggle-btn {
    display: none;
  }

  .name {
    color: #fff;
    font-size: 1.4rem;
    font-weight: bold;
    float: left;
    margin-left: 4rem;
  }

  /* Hero section */
  .hero {
    margin-left: 6rem;
    margin-right: 6rem;
    color: #fff;
    text-align: left;
    padding: 100px 0;
    display: flex;
    /* Use flexbox for the layout */
    justify-content: space-between;
    /* Space between the two columns */
  }

  .hero h1 {
    font-size: 2.5rem;
  }

  .header-container {
    position: relative;
    display: inline-block;
    color: #217bd4;
  }

  .cursor {
    position: absolute;
    top: 1px;
    right: -5px;
    width: 3px;
    height: 35px;
    background-color: #217bd4;
    animation: blink 0.8s infinite;
  }

  @keyframes blink {

    0%,
    100% {
      opacity: 1;
    }

    50% {
      opacity: 0;
    }
  }

  .image-container {
    margin-left: 10%;
  }

  .about {
    padding-left: 6rem;
    padding-right: 6rem;
    color: #fff;
    /* text-align: center; */
  }
  .about-content{
    margin: 5rem 10rem;
    text-align: left !important;
    font-size: larger;
  }

  .container-about {
    margin: 0 auto;
  }

  .header-about {
    text-align: center;
  }

  .about h1 {
    margin-bottom: 3rem;

  }

  .about h2 {
    margin-top: 2rem;
    margin-bottom: 1rem;

  }

  .about-img {
    position: relative;
    width: 10rem;
    height: 10rem;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    align-content: center;
    margin: 0 auto;

  }

  .about-img img {
    border: .2rem solid #217bd4;
    width: 90%;
    border-radius: 50%;

  }

  .about-img .circle-spin {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) rotate(0);
    width: 100%;
    height: 100%;
    border-radius: 50%;
    border-top: .2rem solid #f7363600;
    border-bottom: .2rem solid #00000000;
    border-left: .2rem solid #217bd4;
    border-right: .2rem solid #217bd4;
  }.contact-details{
    padding-right: 5rem!important;
  }

}
/* ... */

